--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,88 +1,13 @@
+/* index.css */
+
 html,
 body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-image: radial-gradient(ellipse at top left, #292f56, #69b330);
+    background-image: url("/bg.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-}
-
-.home {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-.top-bar {
-    background-color: #111;
-    padding: 1rem;
-}
-
-.logo {
-    color: #fff;
-    font-weight: bold;
-    font-size: 1.2rem;
-}
-
-.hero {
-    margin-bottom: 2rem;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 2rem 1rem;
-    color: #fff;
-}
-
-.hero-content {
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 2rem;
-    border-radius: 8px;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.hero h1 {
-    font-size: 2.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.hero p {
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-}
-
-.hero button {
-    margin-top: 2rem;
-    background-color: #55c2da;
-    color: #000;
-    padding: 0.75rem 1.5rem;
-    font-size: 1.2rem;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    transition: background-color 0.2s, transform 0.2s;
-}
-
-.hero button:hover {
-    background-color: #47a8c4;
-    transform: translateY(-2px);
-}
-
-.description {
-    background-color: #0000006b;
-    text-align: center;
-    padding: 1.5rem 1rem;
-}
-
-.description p {
-    border-radius: 8px;
-    max-width: 600px;
-    margin: 0 auto;
-    color: #fff;
-    line-height: 1.4;
 }
