--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -74,3 +74,8 @@
     background-color: #47a8c4;
     transform: scale(1.03);
 }
+
+button[disabled] {
+    opacity: 0.65;
+    cursor: not-allowed;
+}
