--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,20 @@
 /* index.css */
 
 html,
+body,
+#root {
+    height: 100%;
+}
+
+html,
 body {
     margin: 0;
-    padding: 0;
     height: 100%;
     background-image: url("/bg.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center top;
+    background-attachment: fixed;
+    background-color: #0a1412;
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 }
